# IoT-Fall-Detection-EDGE

./: .env.example  .gitignore  CMakeLists.txt  README.md  edge-imu-sim.service  edge-record.service  edge-stream.service  fall_detector_config.json  imu_monitor.py  imu_simulator.py  record_service.py  stream_server.py  telephony_handler.py  telephony_service.py
src/: imu_gateway_main.cpp  main.cpp
src/fall/: EventPoster.cpp  EventPoster.h  EventStore.cpp  EventStore.h  FallConfig.h  FallDetector.cpp  FallDetector.h  ImuSample.h  RingBuffer.h
src/imu/: BackendPoster.cpp  BackendPoster.h  BleImuClient.cpp  BleImuClient.h  ImuConfig.h  ImuPacket.h
tests/: fall_detector_test.cpp  imu_packet_parser_test.cpp  replay_tool.cpp
